BUG: forkit marche plus.

--- a/.templates/download.en.html
+++ b/.templates/download.en.html
@@ -47,7 +47,7 @@ some PDF files produced that way.</p>
    I think every used project is freely distributed under a license free nice enough to "allow me" to include them in my repository,
    which can be downloaded with <a href="https://bitbucket.org/lbesson/web-sphinx-scripts/get/master.zip">this zip archive</a>.
   </br>
-   <span style="color: red">Contactez-moi si je me trompe à ce propos, et si ça vous dérange !</span>
+   <span style="color: red">Contact me if I'm wrong about this, and if that bothers you !</span>
   </br>
 <h2>Troubles</h2>
  <p>If you encounter any difficulty, or if you have a question,
