--- a/.templates/relations.en.html
+++ b/.templates/relations.en.html
@@ -7,11 +7,7 @@
     :copyright: Copyright 2013 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
-{%- if prev %}<div class="will-not-be-sticky">
-  <h4>Previous page</h4>
-  <p class="topless"><a href="{{ prev.link|e }}" title="page précédente !">{{ prev.title }}</a></p>
-  </div>{%- endif %}
-{%- if next %}<div class="will-not-be-sticky">
-  <h4>Next page</h4>
-  <p class="topless"><a href="{{ next.link|e }}" title="page suivante !">{{ next.title }}</a></p>
-  </div>{%- endif %}
+{%- if prev %}<h4>Previous page</h4>
+  <p class="topless"><a href="{{ prev.link|e }}" title="Previous Page!">{{ prev.title }}</a></p>{%- endif %}
+{%- if next %}<h4>Next page</h4>
+  <p class="topless"><a href="{{ next.link|e }}" title="Next Page!">{{ next.title }}</a></p>{%- endif %}
