--- a/.templates/searchbox.en.html
+++ b/.templates/searchbox.en.html
@@ -8,7 +8,6 @@
     :license: GPLv3, see LICENSE for details.
 #}
 {%- if pagename != "search" %}
-<div class="will-not-be-sticky">
 <div id="searchbox" style="display: none">
   <h3>Quick search</h3>
     <form class="search" action="{{ pathto('search') }}" method="get">
@@ -20,4 +19,7 @@
     <p class="searchtip" style="font-size: 80%">Search for a keyword ?</p>
 </div>
 <script type="text/javascript">$('#searchbox').show(0);</script>
-</div>{%- endif %}
+{%- endif %}
+{%- if pagename != "sitemap.en" %}
+  <h4><a href="{{ pathto('sitemap.en.html', true)|e }}" title="Check this page!">Site Map</a></h4>
+{%- endif %}
