--- a/.templates/sourcepdf.fr.html
+++ b/.templates/sourcepdf.fr.html
@@ -7,14 +7,13 @@
     :copyright: Copyright 2013 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
-{%- if show_source and has_source and sourcename %}
-<div class="will-not-be-sticky">
 <h3>Autres formats</h3>
 <ul class="this-page-menu">
+{%- if show_source and has_source and sourcename %}
  <li><a href="{{ pathto('pdf/' + sourcename + '.pdf', true)|e }}" title="Version PDF" 
         rel="nofollow">Voir la version PDF (expérimental)</a></li>
  <li><a href="{{ pathto('_sources/' + sourcename, true)|e }}" title="Version txt"
-        rel="nofollow">Voir le fichier source rST</a></li>
- <li><a href="{{ pathto('download.fr')|e }}" rel="nofollow">Page de téléchargement</a></li><br/>
+        rel="nofollow">Voir le fichier source rST</a></li><br>
+{%- endif %}
+ <li><a href="{{ pathto('download.fr')|e }}" rel="nofollow">Page de téléchargement</a></li>
 </ul>
-</div>{%- endif %}
