--- a/LICENSE.html
+++ b/LICENSE.html
@@ -5,6 +5,41 @@
  <title>GNU General Public License v3.0 - GNU Project - Free Software Foundation (FSF)</title>
  <link rel="alternate" type="application/rdf+xml"
        href="http://www.gnu.org/licenses/gpl-3.0.rdf" /> 
+  <!-- JavaScript (one big is quicker than many small...) -->
+<script type="text/javascript">
+if (typeof console !== 'undefined') { console.log("[INFO] Starting main JS content when document will be ready ! (C) Lilian BESSON, 2011-2013."); }
+// Put all "embedded" script into a $(document).ready(function() {... });
+/* Automatically add Google Analytics web service (a trademark of Google Inc.) */  
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async
+=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  /* Here are set the default values for these variables,
+   * corresponding to the default domain. */
+  var my_id = 'UA-38514290-1',    my_domain = 'crans.org';
+  /* Here a case-by-case analysis is done to change this variable
+   * when the page is located on another web server. */
+  switch(window.location.host) {
+    case 'www.dptinfo.ens-cachan.fr':
+        my_id = 'UA-38514290-2';  my_domain = 'dptinfo.ens-cachan.fr';
+        break;
+    case 'lbesson.bitbucket.org':
+        my_id = 'UA-38514290-14'; my_domain = 'bitbucket.org';
+        break;
+    default:
+        break; };
+  /* New method. */
+  ga('create', my_id, my_domain); ga('send', 'pageview');
+  /* Old method. */
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', my_id]);
+  // _gaq.push(['_setDomainName', my_domain]);
+  _gaq.push(['_trackPageview']);  
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; 
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+  if (typeof console !== 'undefined') { console.log("[INFO] Sending info to Google Analytics: id=" + my_id + ", domain=" + my_domain); }
+</script>
 </head>
 <body>
 <h3 style="text-align: center;">GNU GENERAL PUBLIC LICENSE</h3>
