--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -393,6 +393,7 @@ Des précisions sur les droits de copies, sur les institutions et les marques ci
 Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
   pour collecter des statistiques, désactivable par exemple avec l'excellent
   <a href="http://www.ghostery.com">Ghostery</a>.
+<br>{% include "geekcode.en.html" %}
 <div id="supportBadges"><ul>
 <li><a class="image-reference" title="Firefox" href="http://www.mozilla.org/en-US/firefox/all/">
  <img alt="Optimized for Firefox, tested on Firefox 24.0" 
