Test de changement _en -> .en, _fr -> .fr

--- a/.templates/linkpdf.en.html
+++ b/.templates/linkpdf.en.html
@@ -8,7 +8,7 @@
     :license: GPLv3, see LICENSE for details.
 #}
 <div class="language-selector">
-<a class="image-reference" href="index_en.html" title="Page in English" >
+<a class="image-reference" href="index.en.html" title="Page in English" >
   <img style="width:36px;height:23px;display:block;margin-left:auto;margin-right:auto"
          src="{{ pathto('_images/.en.gif', true)|e }}" alt="Page in English" /></a>
 </div>
