--- a/.templates/linkpdf.fr.html
+++ b/.templates/linkpdf.fr.html
@@ -8,7 +8,7 @@
     :license: GPLv3, see LICENSE for details.
 #}
 <div class="language-selector">
-<a class="image-reference" href="index_fr.html" title="Page en Français" >
+<a class="image-reference" href="index.fr.html" title="Page en Français" >
 	<img style="width:36px;height:23px;display:block;margin-left:auto;margin-right:auto"
          src="{{ pathto('_images/.fr.gif', true)|e }}" alt="Page en Français" /></a>
 </div>
