--- a/.templates/sourcepdf.fr.html
+++ b/.templates/sourcepdf.fr.html
@@ -11,7 +11,7 @@
 <ul class="this-page-menu">
 {%- if show_source and has_source and sourcename %}
  <li><a href="{{ pathto('pdf/' + sourcename + '.pdf', true)|e }}" title="Version PDF" 
-        rel="nofollow">Voir la version PDF (expérimental)</a></li>
+        rel="nofollow">Voir la version PDF (expérimentale)</a></li>
  <li><a href="{{ pathto('_sources/' + sourcename, true)|e }}" title="Version txt"
         rel="nofollow">Voir le fichier source rST</a></li><br>
 {%- endif %}
