Better background for the footer, better description of requirements. Add a link to the source on Bitbucket (awesome to edit it directly)

--- a/.templates/geekcode.fr.html
+++ b/.templates/geekcode.fr.html
@@ -1,8 +1,8 @@
 {#
-    .templates/geekcode.en.html
+    .templates/geekcode.fr.html
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-    Intégration d'un petit Geek Code. (en version)
+    Intégration d'un petit Geek Code. (fr version)
 
     :copyright: Copyright 2013 Lilian Besson
     :license: GPLv3, see LICENSE for details.
