--- a/.templates/sourcepdf.fr.html
+++ b/.templates/sourcepdf.fr.html
@@ -15,8 +15,13 @@
  <li><a href="{{ pathto('_sources/' + sourcename, true)|e }}" title="Version txt"
         rel="nofollow">Voir le fichier source rST</a></li>
  <script type="text/javascript">
+  var path = "{{ sourcename }}";
   var url = window.location.protocol + "//" + window.location.host + window.location.port + window.location.pathname + ".asc";
   console.log("[INFO] url=" + url);
+  window.document.write("<li><a class=\"external-reference\" href=\"https://bitbucket.org/lbesson/web-sphinx/src/master/"
+                         + path.replace(".txt", ".rst")
+                         + "\" title=\"Dans le dépôt git qui héberge la source de la page " + path
+                         + " !\">Voir le fichier source sur Bitbucket</a></li>");
   window.document.write("<li><a href=\"" + url + "\" title=\"Signature GPG ?\">Signature GPG (.asc)</a></li>");
  </script>
  <noscript>
