--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -38,7 +38,7 @@
     <meta name="DC.Language" content="fr" />
     <meta name="DC.Creator" content="Lilian Besson" />
     <meta name="DC.Subject" content="Computer Science,Maths,OCaml,Python,Crans,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,vitae,vitæ,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+,bitbucket,agreg,master,license,licence,gpl,conky,rst2pdf,rst2html,ENS,informatique,Sublime Text,mathématiques" />
-    <meta name="DC.Date" content="2013-08-10" />
+    <meta name="DC.Date" content="2013-15-10" />
   <!-- End of Dublin Core Metadata -->
   <!-- RSS workflow (from perso.crans.org/besson) -->
   <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site"
@@ -416,7 +416,7 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
       src="{{ pathto('_images/.python_80_15.png', true)|e }}" 
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Sphinx" href="http://sphinx-doc.org/install.html">
- <img alt="Made with Sphinx 1.2b1" 
+ <img alt="Made with Sphinx 1.2b2" 
       src="{{ pathto('_images/.sphinx_80_15.png', true)|e }}" 
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Ubuntu 12.04" href="http://www.ubuntu.com/about/about-ubuntu">
@@ -424,11 +424,11 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
       src="{{ pathto('_images/.ubuntu_80_15.png', true)|e }}" 
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Bitbucket" href="https://bitbucket.org/" >
- <img alt="Source code hosted on Bitbucket.org managed with Git" 
+ <img alt="Source code hosted on Bitbucket.org, managed with Git 1.7.9.5"
       src="{{ pathto('_images/.git_80_15.png', true)|e }}" 
       style="width: 36.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="MathJax" href="http://www.mathjax.org">
- <img alt="Powered by MathJax"
+ <img alt="Powered by MathJax 2.2"
       src="http://cdn.mathjax.org/mathjax/badge/mj_logo_60x12.png"
       style="width: 60.0px; height: 12.0px;" /></a></li>
 <!-- A little script to know which web server is used.
@@ -437,7 +437,7 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
       - nginx is used on my personnal machine (as a test, august 2013 - sept. 2013). -->
 <script type="text/javascript">
  if (window.location.host.substring(0,6) == 'jarvis') {
- window.document.write("<li><a class=\"image-reference\" title=\"nginx\" href=\"http://nginx.org/en/\"><img alt=\"Web server : nginx 1.4.1 on "
+ window.document.write("<li><a class=\"image-reference\" title=\"nginx\" href=\"http://nginx.org/en/\"><img alt=\"Web server : nginx 1.4.3 on "
   + window.location.host + "\" src=\"{{ pathto('_images/.nginx_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a></li>"); 
  }
  else {
