--- a/.templates/sourcepdfcv.en.html
+++ b/.templates/sourcepdfcv.en.html
@@ -13,6 +13,14 @@
   <li><a style="text-decoration: underline" href="cv.fr.html" title="French version"
          rel="nofollow">Lisez-le en français</a>, en HTML.</li>
 </ul>
+<div id="google_translate_element"></div>
+<script type="text/javascript">
+console.log("[GoogleTranslate] Initializing the translation plug-in...");
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en', gaTrack: true, gaId: 'UA-38514290-1'}, 'google_translate_element');
+};
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 <h3>My résumé in PDF</h3>
 <ul class="this-page-menu">
   <li><a style="text-decoration: underline" href="cv.pdf" title="PDF English version"
