--- a/.templates/sourcepdfcv.fr.html
+++ b/.templates/sourcepdfcv.fr.html
@@ -13,6 +13,14 @@
   <li><a style="text-decoration: underline" href="cv.en.html" title="Version anglaise"
          rel="nofollow">Consult it in English</a>, in HTML.</li></br>
 </ul>
+<div id="google_translate_element"></div>
+<script type="text/javascript">
+console.log("[GoogleTranslate] Initializing the translation plug-in...");
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'fr', gaTrack: true, gaId: 'UA-38514290-1'}, 'google_translate_element');
+};
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 <h3>Mon CV en PDF</h3>
 <ul class="this-page-menu">
   <li><a style="text-decoration: underline" href="cv.pdf" title="Version PDF"
