--- a/.templates/sourcepdfcv.en.html
+++ b/.templates/sourcepdfcv.en.html
@@ -15,10 +15,11 @@
 </ul>
 <div id="google_translate_element"></div>
 <script type="text/javascript">
-console.log("[GoogleTranslate] Initializing the translation plug-in...");
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'en', gaTrack: true, gaId: 'UA-38514290-1'}, 'google_translate_element');
-};
+if (window.location.hostname == 'perso.crans.org'){
+ console.log("[GoogleTranslate] Initializing the translation plug-in...");
+ function googleTranslateElementInit() {
+   new google.translate.TranslateElement({pageLanguage: 'en', gaTrack: true, gaId: 'UA-38514290-1'}, 'google_translate_element');
+ };};	
 </script>
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 <h3>My résumé in PDF</h3>
