Add a title for otherserver links

--- a/.templates/sidebar_otherserver.en.html
+++ b/.templates/sidebar_otherserver.en.html
@@ -17,16 +17,16 @@
  <script type="text/javascript">
   switch(window.location.host) {
     case 'jarvis.crans.org':
-        document.write("On <span style=\"text-decoration:underline\"><a href=\"http://besson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">besson.qc.to</a></span>\n");
-        document.write("</br>On <span style=\"text-decoration:underline\"><a href=\"http://lbesson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">lbesson.qc.to</a></span>\n");
+        document.write("On <span style=\"text-decoration:underline\"><a title=\"Thanks to freedns.afraid.org for the DNS record besson.qc.to!\" href=\"http://besson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">besson.qc.to</a></span>\n");
+        document.write("</br>On <span style=\"text-decoration:underline\"><a title=\"Thanks to freedns.afraid.org for the DNS record lbesson.qc.to!\" href=\"http://lbesson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">lbesson.qc.to</a></span>\n");
         break;
     case 'perso.crans.org':
-        document.write("On <span style=\"text-decoration:underline\"><a href=\"http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}\">jarvis.crans.org</a></span>\n");
-        document.write("</br>On <span style=\"text-decoration:underline\"><a href=\"http://lbesson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">lbesson.qc.to</a></span>\n");
+        document.write("On <span style=\"text-decoration:underline\"><a title=\"Only on the cr@ns network!\" href=\"http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}\">jarvis.crans.org</a></span>\n");
+        document.write("</br>On <span style=\"text-decoration:underline\"><a title=\"Thanks to freedns.afraid.org for the DNS record lbesson.qc.to!\" href=\"http://lbesson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">lbesson.qc.to</a></span>\n");
         break;
     case 'www.dptinfo.ens-cachan.fr':
-        document.write("On <span style=\"text-decoration:underline\"><a href=\"http://besson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">besson.qc.to</a></span>\n");
-        document.write("</br>On <span style=\"text-decoration:underline\"><a href=\"http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}\">jarvis.crans.org</a></span>\n");
+        document.write("On <span style=\"text-decoration:underline\"><a title=\"Thanks to freedns.afraid.org for the DNS record besson.qc.to!\" href=\"http://besson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">besson.qc.to</a></span>\n");
+        document.write("</br>On <span style=\"text-decoration:underline\"><a title=\"Only on the cr@ns nextork!\" href=\"http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}\">jarvis.crans.org</a></span>\n");
         break;
     default:
         document.write("Error, this page is hosted on an unknown location...");
@@ -37,11 +37,11 @@
   JavaScript is not activated!
   The automatic domain detection is not available...
   <br/>
-   Try on <span style="text-decoration:underline"><a href="http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}">jarvis.crans.org</a></span>.
+   Try on <span style="text-decoration:underline"><a title=\"Only on the cr@ns network!\" href="http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}">jarvis.crans.org</a></span>.
    <br/>
-   Try on <span style="text-decoration:underline"><a href="http://perso.crans.org/besson/{{ pagename|e }}{{ file_suffix|e }}">perso.crans.org/besson/</a></span>.
+   Try on <span style="text-decoration:underline"><a title=\"Hosted by the cr@ns!\" href="http://perso.crans.org/besson/{{ pagename|e }}{{ file_suffix|e }}">perso.crans.org/besson/</a></span>.
    <br/>
-   Try on <span style="text-decoration:underline"><a href="http://www.dptinfo.ens-cachan.fr/~lbesson/{{ pagename|e }}{{ file_suffix|e }}">www.dptinfo.ens-cachan.fr/~lbesson/</a></span>.
+   Try on <span style="text-decoration:underline"><a title=\"Hosted by the CS Departement of ENS Cachan!\" href="http://www.dptinfo.ens-cachan.fr/~lbesson/{{ pagename|e }}{{ file_suffix|e }}">www.dptinfo.ens-cachan.fr/~lbesson/</a></span>.
    <br/>
  </noscript>
 </ul>
