Boulot sur http://besson.qc.to/vlc

--- a/.templates/relations.fr.html
+++ b/.templates/relations.fr.html
@@ -7,7 +7,7 @@
     :copyright: Copyright 2013 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
-{%- if prev %}<h4>Page précedente</h4>
+{%- if prev %}<h4>Page précédente</h4>
   <p class="topless"><a href="{{ prev.link|e }}" title="Page précédente !">{{ prev.title }}</a></p>{%- endif %}
 {%- if next %}<h4>Page suitante</h4>
   <p class="topless"><a href="{{ next.link|e }}" title="Page suivante !">{{ next.title }}</a></p>{%- endif %}
