OKi embed.rst is really nice :)

--- a/.templates/sidebar_otherserver.en.html
+++ b/.templates/sidebar_otherserver.en.html
@@ -34,14 +34,14 @@
   }
  </script>
  <noscript>
-  JavaScript is not activated!
+  JavaScript is not activated!<br>
   The automatic domain detection is not available...
   <br/>
-   Try on <span style="text-decoration:underline"><a title=\"Only on the cr@ns network!\" href="http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}">jarvis.crans.org</a></span>.
+   Try on <span style="text-decoration:underline"><a title="Only on the cr@ns network!" href="http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}">jarvis.crans.org</a></span>.
    <br/>
-   Try on <span style="text-decoration:underline"><a title=\"Hosted by the cr@ns!\" href="http://perso.crans.org/besson/{{ pagename|e }}{{ file_suffix|e }}">perso.crans.org/besson/</a></span>.
+   Try on <span style="text-decoration:underline"><a title="Hosted by the cr@ns!" href="http://perso.crans.org/besson/{{ pagename|e }}{{ file_suffix|e }}">perso.crans.org/besson/</a></span>.
    <br/>
-   Try on <span style="text-decoration:underline"><a title=\"Hosted by the CS Departement of ENS Cachan!\" href="http://www.dptinfo.ens-cachan.fr/~lbesson/{{ pagename|e }}{{ file_suffix|e }}">www.dptinfo.ens-cachan.fr/~lbesson/</a></span>.
+   Try on <span style="text-decoration:underline"><a title="Hosted by the CS Departement of ENS Cachan!" href="http://www.dptinfo.ens-cachan.fr/~lbesson/{{ pagename|e }}{{ file_suffix|e }}">www.dptinfo.ens-cachan.fr/~lbesson/</a></span>.
    <br/>
  </noscript>
 </ul>
