--- a/.templates/sidebar_otherserver.fr.html
+++ b/.templates/sidebar_otherserver.fr.html
@@ -34,14 +34,14 @@
   }
  </script>
  <noscript>
-  JavaScript n'est pas activé !
+  JavaScript n'est pas activé !<br>
   La détection automatique du domaine utilisé n'est pas disponible...
   <br/>
-   Essayez sur <span style="text-decoration:underline"><a title=\"Seulement sur le campus de l'ENS Cachan (hébergé sur ma machine)!\" href="http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}">jarvis.crans.org</a></span>.
+   Essayez sur <span style="text-decoration:underline"><a title="Seulement sur le campus de l'ENS Cachan (hébergé sur ma machine)!" href="http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}">jarvis.crans.org</a></span>.
    <br/>
-   Essayez sur <span style="text-decoration:underline"><a title=\"Hébergé par le crans!\" href="http://perso.crans.org/besson/{{ pagename|e }}{{ file_suffix|e }}">perso.crans.org/besson/</a></span>.
+   Essayez sur <span style="text-decoration:underline"><a title="Hébergé par le crans!" href="http://perso.crans.org/besson/{{ pagename|e }}{{ file_suffix|e }}">perso.crans.org/besson/</a></span>.
    <br/>
-   Essayez sur <span style="text-decoration:underline"><a title=\"Hébergé par le département d'informatique de l'ENS Cachan!\" href="http://www.dptinfo.ens-cachan.fr/~lbesson/{{ pagename|e }}{{ file_suffix|e }}">www.dptinfo.ens-cachan.fr/~lbesson/</a></span>.
+   Essayez sur <span style="text-decoration:underline"><a title="Hébergé par le département d'informatique de l'ENS Cachan!" href="http://www.dptinfo.ens-cachan.fr/~lbesson/{{ pagename|e }}{{ file_suffix|e }}">www.dptinfo.ens-cachan.fr/~lbesson/</a></span>.
    <br/>
  </noscript>
 </ul>
